handoff lifecycle mgmt of AdaptorSupport, MessagingFactory, and scheduled tasks to spring and DI